--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -5,8 +5,8 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/, http://localhost:8762/eureka/, http://localhost:8763/eureka/
 #    register-with-eureka: false
-  server:
-    enable-self-preservation: false
+#  server:
+#    enable-self-preservation: true
 spring:
   application:
     name: EUREKA
