product测试服务显示端口

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -13,3 +13,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     appname: ORDER
+
+#PRODUCt:
+#  ribbon:
+#    NFLoadBalancerRuleClassName：com.netflix.loadbalancer.RandomRule
