order应用的Ribbon负载均衡策略设置，有一点值得注意的：order里面配置的应用名、order调用时使用的应用名、product应用里面spring.application.name，这三者必须相同且要区分大小写，否则无效

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -14,6 +14,7 @@ eureka:
   instance:
     appname: ORDER
 
-#PRODUCt:
-#  ribbon:
-#    NFLoadBalancerRuleClassName：com.netflix.loadbalancer.RandomRule
+# ：order这个应用名、order调用时使用的应用名loadBalancerClient.choose("PRODUCT")、product应用里面spring.application.name，这三者必须相同且要区分大小写，否则无效
+PRODUCT:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
