--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -3,7 +3,7 @@ eureka:
     hostname: eureka
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/, http://localhost:8762/eureka/, http://localhost:8763/eureka/
+      defaultZone: http://localhost:8761/eureka/, http://localhost:8762/eureka/    
     register-with-eureka: false
 #  server:
 #    enable-self-preservation: true
