--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 .vscode/
 
 
-config/**.(yml|properties)
+config/src/main/resources/*.yml
+config/src/main/resources/*.properties
 config.basedir
 
