--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -6,7 +6,13 @@ spring:
     url: jdbc:mysql://localhost:3310/imc_vx_order?characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
-
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: CONFIG
 eureka:
   client:
     service-url:
